--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,1 +1,13 @@
 // #NYCHereICome!
+
+// ABSTRACTS
+@import './abstracts/mixins';
+@import './abstracts/variables';
+// BASE
+@import './base/base';
+// COMPONENTS
+@import './components/news-block';
+// LAYOUT
+@import './layout/header';
+// PAGES
+@import './pages/home';
