Finish build of website. Make sections responsive. | Update #2 |

--- a/resources/sass/abstracts/_mixins.scss
+++ b/resources/sass/abstracts/_mixins.scss
@@ -36,6 +36,7 @@ $bp-large: 62.5em;   // 1000px
 $bp-medium-2: 56.25em; // 900px
 $bp-medium-1: 53.125em; // 850px
 $bp-medium: 50em;    // 800px
+$bp-ipad: 48em;      // 768px
 $bp-small-lg: 46.875em; // 750px
 $bp-small-md: 43.75em; // 700px
 $bp-small: 37.5em;   // 600px
