--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -8,6 +8,8 @@
 // COMPONENTS
 @import './components/news-block';
 // LAYOUT
+@import './layout/footer';
 @import './layout/header';
+@import './layout/navigation';
 // PAGES
 @import './pages/home';
