--- a/resources/sass/abstracts/_variables.scss
+++ b/resources/sass/abstracts/_variables.scss
@@ -5,5 +5,8 @@ $color-black: #000;
 $color-white: #fff;
 // Background Colors
 $color-background-1: #e4e4e4;
+$color-background-2: #ebebeb;
+$color-background-3: #d3d3d3;
+$color-background-4: #f5f5f5;
 // Font Colors
 $color-font-1: #616161;
