Implement sticky navigation. Make sections responsive for all sizes. | Update #3 |

--- a/resources/sass/abstracts/_mixins.scss
+++ b/resources/sass/abstracts/_mixins.scss
@@ -48,4 +48,5 @@ $bp-vsmall-2: 25em;   // 400px
 $bp-vsmall-3: 23.75em; // 375px
 $bp-vsmall-3b: 22.5em; // 360px
 $bp-vsmall-4: 20.9375em; // 335px
+$bp-iphonese: 20em; // 320px
 $bp-vsmall-5: 18.75em;  // 300px
