--- a/resources/sass/layout/_footer.scss
+++ b/resources/sass/layout/_footer.scss
@@ -5,23 +5,46 @@
 .footer {
     background-color: $color-background-4;
     margin-top: -27vh;
+    // - Media Queries - \\
+    @media only screen and (max-width: $bp-desktop) { margin-top: -95vh; }
+    @media only screen and (max-width: $bp-largest-5) { margin-top: -25vh; }
+    @media only screen and (max-width: $bp-small) { margin-top: -67vh; }
+    @media only screen and (max-width: $bp-iphonese) { margin-top: -70vh; }
 }
 // Left Side of the footer
 .footer-left {
-    padding-top: 18rem;
-    padding-left: 12rem;
+    padding-left: 10rem;
     h2 { font-size: 7rem; font-weight: 500; }
-    p { font-weight: 300; font-size: 1.6rem; width: 45%; border-bottom: .1rem solid $color-background-3; padding-bottom: 2rem; }
+    p { font-weight: 300; font-size: 1.6rem; border-bottom: .1rem solid $color-background-3; padding-bottom: 2rem; }
     h3 { font-weight: 300; font-size: 1.8rem; }
+    @media only screen and (max-width: $bp-small) { padding-right: 10rem; text-align: center; }
 }
 // Right Side of the footer
 .footer-right {
-    padding-top: 20rem;
-    margin-right: 10rem;
+    padding-right: 10rem;
+    @media only screen and (max-width: $bp-largest-5) { margin-left: 8rem; }
+    @media only screen and (max-width: $bp-small) { padding-right: 0; margin-left: 0; margin-bottom: 5rem; }
+}
+.footer-left, .footer-right { 
+    margin-top: 20rem;
+    // - Media Queries - \\
+    @media only screen and (max-width: $bp-largest-5) { margin-top: 40rem; }
+    @media only screen and (max-width: $bp-small) { margin-top: 60rem; }
+    @media only screen and (max-width: $bp-vsmall-3) { margin-top: 45rem; }
+    @media only screen and (max-height: 50.75em) { margin-top: 60rem; }
 }
 // Footer Element
 .fel {
     font-weight: 300;
     cursor: pointer;
     i { color: $color-primary; font-size: 2rem; margin-right: 1rem; }
+}
+// Footer Block
+.fblock { 
+    @media only screen and (max-width: $bp-small) { text-align: center; margin-top: 5rem; padding-left: 0 !important;
+        h4 { 
+            @media only screen and (max-width: $bp-small) { font-size: 2rem; }
+        }
+        ul li { font-size: 1.8rem; }
+    }  
 }
