--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -4,12 +4,16 @@
 
 // Header Wrapper
 .header {
-    background-image: linear-gradient(to bottom, rgba($color-primary, .01), rgba($color-primary, .65)), url('../img/hero.jpg');
+    position: relative;
+    background-image: linear-gradient(to top, rgba($color-primary, .75), rgba($color-primary, .15), rgba($color-black, .40)), url('../img/hero.jpg');
     background-position: center;
     background-size: cover;
-    min-height: 55vh;
+    min-height: 60vh;
     // Content
     &__content {
-        h1 { font-size: 5.5rem; font-weight: 400; }
+        h1 { font-size: 5.5rem; font-weight: 400; 
+            @media only screen and (max-width: $bp-small) { font-size: 4rem; }
+        }
     }
+    @media only screen and (max-width: $bp-desktop) { min-height: 70vh; }
 }
